--- a/src/moviecollector/gui/controllers/AddEditMovieView.fxml
+++ b/src/moviecollector/gui/controllers/AddEditMovieView.fxml
@@ -8,42 +8,47 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="152.0" prefWidth="448.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="moviecollector.gui.controllers.AddEditMovieController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="152.0" prefWidth="473.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="moviecollector.gui.controllers.AddEditMovieController">
    <children>
-      <TextField fx:id="titleTextField" layoutX="56.0" layoutY="6.0" prefHeight="26.0" prefWidth="258.0" promptText="Enter movie title...">
+      <TextField fx:id="titleTextField" layoutX="56.0" layoutY="6.0" prefHeight="26.0" prefWidth="283.0" promptText="Enter movie title...">
          <effect>
             <DropShadow />
          </effect></TextField>
-      <Button fx:id="saveMovieButton" layoutX="133.0" layoutY="112.0" mnemonicParsing="false" onAction="#handleSaveMovie" prefHeight="26.0" prefWidth="104.0" text="Save Movie">
+      <Button fx:id="saveMovieButton" layoutX="58.0" layoutY="112.0" mnemonicParsing="false" onAction="#handleSaveMovie" prefHeight="26.0" prefWidth="95.0" text="Save Movie">
          <effect>
             <DropShadow />
          </effect></Button>
       <Text layoutX="5.0" layoutY="60.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Genre" wrappingWidth="43.73675537109375" />
       <Text layoutX="5.0" layoutY="24.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Title" wrappingWidth="43.73675537109375" />
-      <ComboBox fx:id="categoryCombobox" layoutX="55.0" layoutY="42.0" prefHeight="26.0" prefWidth="258.0" promptText="Genres added is placed to the right...">
+      <ComboBox fx:id="categoryCombobox" layoutX="55.0" layoutY="42.0" prefHeight="26.0" prefWidth="283.0" promptText="Genres added is placed to the right...">
          <effect>
             <DropShadow />
          </effect></ComboBox>
-      <Button fx:id="addCategoryButton" layoutX="247.0" layoutY="112.0" mnemonicParsing="false" onAction="#handleAddCategory" prefHeight="26.0" prefWidth="85.0" text="Add Genre">
+      <Button fx:id="addCategoryButton" layoutX="164.0" layoutY="112.0" mnemonicParsing="false" onAction="#handleAddCategory" prefHeight="26.0" prefWidth="85.0" text="Add Genre">
          <effect>
             <DropShadow />
          </effect></Button>
-      <ListView fx:id="movieCatListView" layoutX="324.0" layoutY="6.0" prefHeight="97.0" prefWidth="115.0">
+      <ListView fx:id="movieCatListView" layoutX="350.0" layoutY="6.0" prefHeight="97.0" prefWidth="115.0">
          <effect>
             <DropShadow />
          </effect></ListView>
-      <Button fx:id="movieLocationButton" layoutX="21.0" layoutY="112.0" mnemonicParsing="false" onAction="#handleMovieLocate" prefHeight="26.0" prefWidth="104.0" text="Movie Location">
+      <Button fx:id="movieLocationButton" layoutX="271.0" layoutY="76.0" mnemonicParsing="false" onAction="#handleMovieLocate" prefHeight="26.0" prefWidth="66.0" text="Choose">
          <effect>
             <DropShadow />
          </effect>
       </Button>
-      <TextField fx:id="locationTextField" editable="false" focusTraversable="false" layoutX="56.0" layoutY="76.0" prefHeight="26.0" prefWidth="258.0" promptText="Enter movie title...">
+      <TextField fx:id="locationTextField" editable="false" focusTraversable="false" layoutX="56.0" layoutY="76.0" prefHeight="26.0" prefWidth="215.0">
          <effect>
             <DropShadow />
          </effect>
       </TextField>
       <Text layoutX="5.0" layoutY="94.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Location" wrappingWidth="49.73675537109375" />
-      <Button fx:id="removeCategoryButton" layoutX="343.0" layoutY="112.0" mnemonicParsing="false" onAction="#handleRemoveCategory" prefHeight="26.0" prefWidth="95.0" text="Remove genre">
+      <Button fx:id="removeCategoryButton" layoutX="262.0" layoutY="112.0" mnemonicParsing="false" onAction="#handleRemoveCategory" prefHeight="26.0" prefWidth="95.0" text="Remove genre">
+         <effect>
+            <DropShadow />
+         </effect>
+      </Button>
+      <Button fx:id="cancelButton" layoutX="369.0" layoutY="112.0" mnemonicParsing="false" onAction="#handleCancel" prefHeight="26.0" prefWidth="95.0" text="Cancel">
          <effect>
             <DropShadow />
          </effect>
