--- a/src/moviecollector/gui/views/MovieCollectorView.fxml
+++ b/src/moviecollector/gui/views/MovieCollectorView.fxml
@@ -25,17 +25,17 @@
       <Button fx:id="addCategoryButton" layoutX="73.0" layoutY="467.0" mnemonicParsing="false" onAction="#handleAddCategory" text="Add" />
       <Label layoutX="14.0" layoutY="77.0" prefHeight="25.0" prefWidth="285.0" text="Categories" />
       <Label layoutX="320.0" layoutY="77.0" prefHeight="26.0" prefWidth="38.0" text="Movies" />
-      <TextField fx:id="filterTitleField" layoutX="367.0" layoutY="44.0" prefHeight="25.0" prefWidth="150.0" promptText="Enter movie title..." />
+      <TextField fx:id="filterTitleField" layoutX="323.0" layoutY="14.0" prefHeight="25.0" prefWidth="150.0" promptText="Enter movie title..." />
       <Button fx:id="playMovieButton" layoutX="521.0" layoutY="44.0" mnemonicParsing="false" onAction="#handlePlayMovie" prefHeight="53.0" prefWidth="85.0" text="Play">
          <effect>
             <DropShadow />
          </effect></Button>
-      <Button fx:id="clearFiltersButton" layoutX="311.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleClearFilter" text="Clear filter" />
-      <ComboBox fx:id="addRatingSelector" layoutX="367.0" layoutY="71.0" onAction="#handleAddRating" prefHeight="26.0" prefWidth="150.0" promptText="Add Rating" />
-      <ComboBox fx:id="minimumRating" layoutX="388.0" layoutY="14.0" prefHeight="25.0" prefWidth="129.0" promptText="Minimum rating" />
-      <Button fx:id="searchButton" layoutX="311.0" layoutY="44.0" mnemonicParsing="false" onAction="#handleSetFilter" text="Filter" />
+      <Button fx:id="clearFiltersButton" layoutX="442.0" layoutY="44.0" mnemonicParsing="false" onAction="#handleClearFilter" text="Clear filter" />
+      <ComboBox fx:id="addRatingSelector" layoutX="477.0" layoutY="467.0" onAction="#handleAddRating" prefHeight="26.0" prefWidth="129.0" promptText="Add Rating" />
+      <ComboBox fx:id="minimumRating" layoutX="477.0" layoutY="14.0" prefHeight="25.0" prefWidth="129.0" promptText="Minimum rating" />
+      <Button fx:id="searchButton" layoutX="325.0" layoutY="44.0" mnemonicParsing="false" onAction="#handleSetFilter" prefHeight="25.0" prefWidth="110.0" text="Set filter" />
       <Button fx:id="editMovieButton" layoutX="434.0" layoutY="467.0" mnemonicParsing="false" onAction="#handleEditMovie" text="Edit" />
       <Button fx:id="editCategoryButton" layoutX="121.0" layoutY="467.0" mnemonicParsing="false" onAction="#handleEditCategory" text="Edit" />
-      <ComboBox fx:id="sortCombobox" layoutX="521.0" layoutY="14.0" onAction="#handleSorting" prefHeight="25.0" prefWidth="85.0" promptText="Sort..." />
+      <ComboBox fx:id="sortCombobox" layoutX="377.0" layoutY="77.0" onAction="#handleSorting" prefHeight="25.0" prefWidth="136.0" promptText="Sort..." />
    </children>
 </AnchorPane>
